fix(css): Disable ugly scrollbars

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,6 +1,12 @@
 * {
     -webkit-box-sizing: border-box;
-    box-sizing: border-box
+    box-sizing: border-box;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 body {
